<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- Parent -->
  <parent>
    <groupId>org.jboss</groupId>
    <artifactId>jboss-parent</artifactId>
    <version>52</version>
    <relativePath />
  </parent>

  <!-- Model Information -->
  <modelVersion>4.0.0</modelVersion>

  <!-- Artifact Information -->
  <groupId>org.jboss.arquillian</groupId>
  <artifactId>arquillian-parent</artifactId>
  <version>1.10.3.Final-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Arquillian Aggregator</name>
  <url>https://arquillian.org</url>
  <description>Arquillian is an innovative and highly extensible testing platform for the JVM that enables developers to easily create automated integration, functional and acceptance tests for Java middleware.</description>
  <organization>
    <name>Arquillian Community</name>
    <url>https://arquillian.org</url>
  </organization>

  <properties>
    <!-- jboss-parent overrides -->
    <maven.compiler.release>8</maven.compiler.release>
    <jdk.min.version>${maven.compiler.release}</jdk.min.version>

    <!-- Central Publishing Plugin -->
    <version.central.publishing.maven.plugin>0.10.0</version.central.publishing.maven.plugin>

    <!-- maven-release-plugin configuration -->
    <autoVersionSubmodules>true</autoVersionSubmodules>
    <releaseProfiles>central-release</releaseProfiles>
    <signTag>true</signTag>
    <tagNameFormat>@{project.version}</tagNameFormat>
    <arguments>-DskipItTests=true -Dcentral.autoPublish=${central.autoPublish} -Dcentral.waitUntil=${central.waitUntil}</arguments>
    <!-- Temporarily keep SCM changes manual -->
    <pushChanges>false</pushChanges>
    <localCheckout>true</localCheckout>

    <!-- Maven Central properties -->
    <central.sonatype.url>https://central.sonatype.com</central.sonatype.url>
    <central.serverId>central</central.serverId>
    <central.deploymentName>arquillian-core-${project.version}</central.deploymentName>
    <!-- Temporarily keep publishing manual -->
    <central.autoPublish>false</central.autoPublish>
    <central.waitUntil>validated</central.waitUntil>
    <central.skipPublishing>false</central.skipPublishing>

    <!-- External Deps -->
    <version.shrinkwrap_shrinkwrap>1.2.6</version.shrinkwrap_shrinkwrap>
    <version.shrinkwrap_descriptors>2.0.0</version.shrinkwrap_descriptors>

    <!-- Checkstyle plugin -->
    <version.org.apache.maven-checkstyle-plugin>3.6.0</version.org.apache.maven-checkstyle-plugin>
    <version.com.puppycrawl.checkstyle>9.3</version.com.puppycrawl.checkstyle>
    <version.org.wildfly.checkstyle-config>1.0.8.Final</version.org.wildfly.checkstyle-config>
  </properties>

  <issueManagement>
    <system>Jira</system>
    <url>https://issues.redhat.com/browse/ARQ</url>
  </issueManagement>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://git@github.com:arquillian/arquillian-core.git</connection>
    <developerConnection>scm:git:ssh://github.com/arquillian/arquillian-core.git</developerConnection>
    <url>git://github.com/arquillian/arquillian-core.git</url>
    <tag>1.10.x</tag>
  </scm>

  <developers>
    <developer>
      <id>arquillian.org</id>
      <name>Arquillian Community</name>
      <organization>arquillian.org</organization>
      <organizationUrl>https://arquillian.org</organizationUrl>
    </developer>
  </developers>

  <modules>
    <module>build</module>
    <module>core</module>
    <module>config</module>
    <module>test</module>
    <module>container</module>

    <module>junit</module>
    <module>junit5</module>
    <module>testng</module>

    <module>testenrichers</module>
    <module>protocols</module>

    <module>bom</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${version.org.apache.maven-checkstyle-plugin}</version>
        <dependencies>
          <dependency>
            <!-- The puppycrawl dependency is needed to override the version using JDK11 from the parent -->
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${version.com.puppycrawl.checkstyle}</version>
          </dependency>
          <dependency>
            <groupId>org.wildfly.checkstyle</groupId>
            <artifactId>wildfly-checkstyle-config</artifactId>
            <version>${version.org.wildfly.checkstyle-config}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>check-style</id>
            <phase>compile</phase>
            <goals>
              <goal>checkstyle</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <linkXRef>false</linkXRef>
          <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <trimStackTrace>false</trimStackTrace>
          <printSummary>true</printSummary>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*TestSuite.java</include>
          </includes>
          <useFile>true</useFile>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>integration-tests</id>
      <modules>
        <module>integration-tests</module>
      </modules>
    </profile>
    <profile>
      <id>central-release</id>
      <modules>
        <module>integration-tests</module>
      </modules>
    </profile>
  </profiles>
</project>
